# vector_editor

./: .gitignore  CMakeLists.txt  Readme.md
include/gui/: Canvas.h  MainWindow.h
include/model/: Circle.h  Diagram.h  FreeHand.h  GraphicsObject.h  Hexagon.h  Line.h  Rectangle.h  RoundedRectangle.h  Text.h
include/svg/: SVGparser.h  SVGparser2.o.h  SVGwriter.h
src/: main.cpp
src/gui/: Canvas.cpp  Canvasdrawing.cpp  Canvasmouse.cpp  MainWindowconnection.cpp  MainWindowcore.cpp
src/model/: Circle.cpp  Diagram.cpp  FreeHand.cpp  Hexagon.cpp  Line.cpp  Rectangle.cpp  RoundedRectangle.cpp  Text.cpp
src/svg/: SVGparser.cpp  SVGparser2.o.cpp  SVGwriter.cpp
